--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="info_punkts">
             <article class="card-info" >
               <img src="images/first.png" alt="cappuccino" class="info__img">
-              <h2 class="card__name">Проходишь регестрацию</h2>
+              <h2 class="card__name">Проходишь регистрацию</h2>
               <p class="card__price"><span class="card__currency"></span>
               </p>
             </article>
